# trajan-agent

./: Dockerfile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 029fe0338bd5_billing_events_actor_xor_stripe_check.py  03095a74990f_billing_events_organization_id_set_null.py  3638cf52d5d9_add_dashboard_stats_cache.py  36e4127be7d3_rls_write_policies_post_cutover_sweep.py  51441e87bf2e_rls_phase10_changelog_tables.py  53cff4c86e02_add_github_connect_modal_dismissed_.py  54f6dd9d1d33_add_changelog_entries_and_commits_tables.py  5ed8226f224b_rls_phase11_code_graph_tables.py  70323bca3baa_add_on_delete_cascade_remaining_product_.py  7cba86c9058a_add_org_api_keys_table.py  8b4e5a9c2fd4_add_dashboard_mode_to_user_preferences.py  8c6ced93b699_add_repo_sync_config_columns.py  9658836f9741_add_users_insert_self_policy.py  9f57482e6a14_rls_infra_components_table.py  a3b4c5d6e7f8_add_code_nodes_and_code_edges_tables.py  af976c33d979_add_infra_components_table.py  b347e95c9611_grant_privileges_to_trajan_cron.py  b9263ae03d26_create_trajan_app_role_and_force_rls.py  c6ecd6440d59_billing_events_admin_insert_policy.py  c9efcc1754f6_rls_teammate_readable_users_and_.py  db70ebd8d550_drop_quick_access_columns.py  e1525109e759_schema_drift_cleanup.py  fbb57f3f107a_grant_set_role_to_postgres_for_trajan_.py  j0e1f2g3h4i5_add_repo_token_and_source_type.py  k1f2g3h4i5j6_add_manual_assignment_expires_at.py  l2g3h4i5j6k7_add_getting_started_dismissed.py
app/: main.py
app/api/: router.py
app/config/: settings.py
app/core/: database.py  rate_limit.py  rls.py  rls_policy_allowlist.py
app/domain/: __init__.py  app_info_operations.py  changelog_operations.py  code_graph_operations.py  dashboard_stats_cache_operations.py  document_operations.py  github_app_installation_operations.py  infra_component_operations.py  org_api_key_operations.py  org_member_operations.py  organization_operations.py  preferences_operations.py  product_access_operations.py  product_operations.py  repository_operations.py  section_operations.py  work_item_operations.py
app/models/: __init__.py  announcement.py  app_info.py  changelog.py  code_edge.py  code_node.py  dashboard_stats_cache.py  document.py  github_app_installation.py  infra_component.py  org_api_key.py  product.py  repository.py  subscription.py  user_preferences.py  (+1 more)
tests/: conftest.py
(+94 files in other folders)
